--- a/WolvenKit/Views/Shared/RecentlyUsedItemsView.xaml
+++ b/WolvenKit/Views/Shared/RecentlyUsedItemsView.xaml
@@ -25,15 +25,23 @@
         </Grid.RowDefinitions>
 
 
-
+        <iconPacks:PackIconCodicons
+         Width="30"
+         Height="30"
+         Margin="0,-10,0,0"
+         HorizontalAlignment="Left"
+         VerticalAlignment="Center"
+         Kind="GoToFile"
+         />
         <TextBlock
          Height="50"
-         Margin="15,10,5,5"
+         Margin="40,10,5,5"
          HorizontalAlignment="Left"
+         VerticalAlignment="Center"
          Style="{StaticResource TextBlockLargeBold}"
          Text="Recent Projects"
          />
-    
+
         <ItemsControl
          Grid.Row="1"
          ItemsSource="{Binding PinnedItems}"
