Add basic context menu for AB import
#453

--- a/WolvenKit/Views/Editor/Basic/AssetBrowserView.xaml
+++ b/WolvenKit/Views/Editor/Basic/AssetBrowserView.xaml
@@ -6,6 +6,7 @@
  xmlns:converters="clr-namespace:WolvenKit.Functionality.Converters;assembly=WolvenKit.App"
  xmlns:converters1="clr-namespace:WolvenKit.Functionality.Converters"
  xmlns:editor="clr-namespace:WolvenKit.ViewModels.Editor;assembly=WolvenKit.App"
+ xmlns:local="clr-namespace:WolvenKit.Views.Editor"
  xmlns:feather="clr-namespace:Feather.Controls;assembly=Feather.Controls"
  xmlns:hc="https://handyorg.github.io/handycontrol"
  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
@@ -229,7 +230,11 @@
                              SelectionMode="Extended"
                              >
 
-
+                                <syncfusion:SfDataGrid.RecordContextMenu>
+                                    <ContextMenu>
+                                        <MenuItem Header="Import all" Click="MenuItem_ImportAll_Click" />
+                                    </ContextMenu>
+                                </syncfusion:SfDataGrid.RecordContextMenu>
 
 
 
