--- a/WolvenKit/Views/HomePage/Pages/GeneralSubSettingsView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/GeneralSubSettingsView.xaml
@@ -3,6 +3,7 @@
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:catel="http://schemas.catelproject.com"
+ xmlns:ucontrols="clr-namespace:WolvenKit.Controls;assembly=WolvenKit.App"
  xmlns:hc="https://handyorg.github.io/handycontrol">
 
     <Grid hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}">
@@ -91,10 +92,7 @@
                                  VerticalAlignment="Center"
                                  Text="Default project folder" />
                                 <StackPanel Orientation="Horizontal">
-                                    <TextBox
-                                     Width="250"
-                                     Margin="250,0,0,0"
-                                     Text="" />
+                                    <ucontrols:AddPathDialogView/>
                                 </StackPanel>
                             </Grid>
                         </StackPanel>
