--- a/WolvenKit/Views/HomePage/Pages/VisualEditorSubSettingsView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/VisualEditorSubSettingsView.xaml
@@ -26,7 +26,7 @@
                              Margin="0,0,50,0"
                              VerticalAlignment="Center"
                              FontSize="16"
-                             Text="General" />
+                             Text="Visual editor" />
                         </Grid>
                     </Border>
 
