--- a/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
+++ b/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
@@ -3,16 +3,310 @@
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:catel="http://schemas.catelproject.com"
+ xmlns:hc="https://handyorg.github.io/handycontrol"
+ xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+ xmlns:po="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
+ xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
  >
+    <catel:UserControl.Resources>
+        <VisualBrush
+         x:Key="HatchBrush"
+         po:Freeze="True"
+         TileMode="Tile"
+         Viewbox="0,0,5,5"
+         ViewboxUnits="Absolute"
+         Viewport="0,0,15,15"
+         ViewportUnits="Absolute"
+         >
+            <VisualBrush.Visual>
+                <Path
+                 Data="M 0 5 L 5 0 M -2 2 L 2 -2 M 3 7 L 7 3"
+                 RenderOptions.EdgeMode="Aliased"
+                 Stroke="{DynamicResource RegionBrush}"
+                 StrokeEndLineCap="Square"
+                 />
+            </VisualBrush.Visual>
+        </VisualBrush>
+    </catel:UserControl.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
+            <RowDefinition Height="1*" />
 
-        <Label Grid.Row="0" Content="{Binding Title}" />
-        <Label Grid.Row="1" Content="Here goes your real content" />
+            <RowDefinition Height="2*" />
+
+            <RowDefinition Height="70" />
+
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="10" />
+
+            <ColumnDefinition Width="1*" />
+        </Grid.ColumnDefinitions>
+
+        <Grid
+         Grid.Row="1"
+         Grid.RowSpan="2"
+         Grid.Column="1"
+         Background="{StaticResource RegionBrush}"
+         />
+
+        <Border
+         Grid.Row="0"
+         Grid.ColumnSpan="4"
+         BorderBrush="{DynamicResource RegionBrush}"
+         BorderThickness="0,0,0,4"
+         >
+            <Grid>
+                <Grid Background="{DynamicResource ContentBackgroundAlt2}" />
+
+                <Grid Background="{StaticResource HatchBrush}" />
+
+                <TextBlock
+                 Margin="0,15,0,0"
+                 HorizontalAlignment="Center"
+                 VerticalAlignment="Top"
+                 FontSize="15"
+                 Foreground="Gray"
+                 Text="Drag 'n Drop file(s) to start.."
+                 />
+
+                <iconPacks:PackIconCodicons
+                 Width="24"
+                 Height="24"
+                 HorizontalAlignment="Center"
+                 VerticalAlignment="Center"
+                 Foreground="Gray"
+                 Kind="Add"
+                 />
+                <Border x:Name="DragNDropBorder" BorderThickness="2" />
+
+            </Grid>
+
+        </Border>
+
+
+
+        <Grid Grid.Row="1" Grid.Column="0">
+
+            <syncfusion:SfDataGrid Margin="0,20,0,0" BorderBrush="Transparent" />
+            <TextBlock
+             Margin="0"
+             Padding="10,4,10,4"
+             HorizontalAlignment="Stretch"
+             VerticalAlignment="Top"
+             Background="{DynamicResource ContentBackgroundAlt}"
+             Text="Importer List"
+             TextAlignment="Center"
+             />
+        </Grid>
+        <Grid Grid.Row="1" Grid.Column="2">
+
+            <syncfusion:SfDataGrid Margin="0,20,0,0" BorderBrush="Transparent" />
+            <TextBlock
+             Margin="0"
+             Padding="10,4,10,4"
+             HorizontalAlignment="Stretch"
+             VerticalAlignment="Top"
+             Background="{DynamicResource ContentBackgroundAlt}"
+             Text="Exporter List"
+             TextAlignment="Center"
+             />
+        </Grid>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <StackPanel Grid.Row="2" Grid.Column="2">
+            <Button
+             Margin="2"
+             HorizontalAlignment="Stretch"
+             VerticalAlignment="Top"
+             Background="{DynamicResource ContentBackgroundAlt}"
+             Style="{DynamicResource MahApps.Styles.Button.ToolBar}"
+             >
+                <StackPanel Orientation="Horizontal">
+                    <iconPacks:PackIconCodicons VerticalAlignment="Center" Kind="FolderOpened" />
+                    <TextBlock FontSize="11" Text=" Select 'OUT' path." />
+                </StackPanel>
+
+            </Button>
+            <Button
+             Margin="2"
+             HorizontalAlignment="Stretch"
+             VerticalAlignment="Top"
+             Background="{DynamicResource ContentBackgroundAlt}"
+             Style="{DynamicResource MahApps.Styles.Button.ToolBar}"
+             >
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock FontSize="11" Text="EXPORT " />
+                    <iconPacks:PackIconCodicons VerticalAlignment="Center" Kind="ArrowRight" />
+
+                </StackPanel>
+
+            </Button>
+        </StackPanel>
+
+        <StackPanel Grid.Row="2" Grid.Column="0">
+            <Button
+             Margin="2"
+             VerticalAlignment="Top"
+             Background="{DynamicResource ContentBackgroundAlt}"
+             Style="{DynamicResource MahApps.Styles.Button.ToolBar}"
+             >
+                <StackPanel Orientation="Horizontal">
+                    <iconPacks:PackIconCodicons VerticalAlignment="Center" Kind="FolderOpened" />
+                    <TextBlock FontSize="11" Text=" Select 'IN' path." />
+                </StackPanel>
+
+            </Button>
+            <Button
+             Margin="2"
+             VerticalAlignment="Top"
+             Background="{DynamicResource ContentBackgroundAlt}"
+             Style="{DynamicResource MahApps.Styles.Button.ToolBar}"
+             >
+                <StackPanel Orientation="Horizontal">
+                    <iconPacks:PackIconCodicons VerticalAlignment="Center" Kind="ArrowLeft" />
+                    <TextBlock FontSize="11" Text=" IMPORT" />
+                </StackPanel>
+
+            </Button>
+        </StackPanel>
+
+
+
+
+
+
+
+
+
+
+
+        <!--  Special Import / Export Options  -->
+        <Grid
+         Grid.RowSpan="4"
+         Grid.ColumnSpan="4"
+         Background="{DynamicResource ContentBackgroundAlt2}"
+         Visibility="Visible"
+         >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="80" />
+                <RowDefinition Height="5*" />
+            </Grid.RowDefinitions>
+
+            <Grid>
+                <hc:Divider Margin="90,0,50,0" VerticalAlignment="Center" />
+
+                <TextBlock
+                 Margin="10"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Center"
+                 FontSize="15"
+                 Text="EXTENSION"
+                 />
+
+
+                <Button
+                 Width="60"
+                 Height="35"
+                 Margin="10"
+                 HorizontalAlignment="Right"
+                 VerticalAlignment="Center"
+                 Background="{DynamicResource ContentBackgroundAlt}"
+                 Content="ADD"
+                 FontSize="12"
+                 Style="{DynamicResource MahApps.Styles.Button.ToolBar}"
+                 />
+            </Grid>
+
+            <Grid
+             x:Name="ContentLinkForSpecialExportOrImportOptions"
+             Grid.Row="1"
+             Margin="2"
+             Background="{DynamicResource ContentBackgroundAlt}"
+             />
+
+
+        </Grid>
+
+
+
+
+
+
+
+
+        <!--  file succesfully/error adding/added window.  -->
+        <Grid
+         Grid.RowSpan="4"
+         Grid.ColumnSpan="4"
+         Background="{DynamicResource ContentBackgroundAlt2}"
+         Visibility="Collapsed"
+         >
+            <iconPacks:PackIconCodicons
+             Width="50"
+             Height="35"
+             HorizontalAlignment="Center"
+             VerticalAlignment="Center"
+             Kind="Error"
+             Visibility="Visible"
+             />
+            <iconPacks:PackIconCodicons
+             Width="50"
+             Height="35"
+             HorizontalAlignment="Center"
+             VerticalAlignment="Center"
+             Kind="Check"
+             Visibility="Visible"
+             />
+            <TextBlock
+             x:Name="FileAddSuccesOrErrorTextBlock"
+             Margin="0,65,0,0"
+             HorizontalAlignment="Center"
+             VerticalAlignment="Center"
+             Text="File(s) succesfully added!"
+             />
+        </Grid>
+
+
+
+
+        <!--  Exporting/Importing Overlay  -->
+        <Grid
+         Grid.RowSpan="4"
+         Grid.ColumnSpan="4"
+         Background="Gray"
+         Visibility="Collapsed"
+         >
+            <syncfusion:SfBusyIndicator AnimationType="Gear" />
+            <TextBlock
+             x:Name="ImportExportOverlayText"
+             Margin="0,65,0,0"
+             HorizontalAlignment="Center"
+             VerticalAlignment="Center"
+             Text="Files are being imported..."
+             />
+        </Grid>
+
+
     </Grid>
 
 </catel:UserControl>
