--- a/WolvenKit/Functionality/Ab4d/LineDepthBiasSample.xaml
+++ b/WolvenKit/Functionality/Ab4d/LineDepthBiasSample.xaml
@@ -1,12 +1,12 @@
 <Page
- x:Class="Ab3d.DXEngine.LineDepthBiasSample"
+ x:Class="WolvenKit.Functionality.Ab4d.LineDepthBiasSample"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:cameras="clr-namespace:Ab3d.Cameras;assembly=Ab3d.PowerToys"
  xmlns:controls="clr-namespace:Ab3d.Controls;assembly=Ab3d.PowerToys"
  xmlns:controls1="clr-namespace:Ab3d.DirectX.Controls;assembly=Ab3d.DXEngine.Wpf"
  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
- xmlns:localControls="clr-namespace:Ab3d.DXEngine"
+ xmlns:localControls="clr-namespace:WolvenKit.Functionality.Ab4d"
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
  xmlns:visuals="clr-namespace:Ab3d.Visuals;assembly=Ab3d.PowerToys"
  Title="LineDepthBiasSample"
