--- a/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
+++ b/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
@@ -69,7 +69,7 @@
                  VerticalAlignment="Top"
                  FontSize="15"
                  Foreground="Gray"
-                 Text="Drag 'n Drop file(s) to start.."
+                 Text="Click Here or Drag 'n Drop file(s) to start.."
                  />
 
                 <iconPacks:PackIconCodicons
@@ -80,7 +80,12 @@
                  Foreground="Gray"
                  Kind="Add"
                  />
-                <Border x:Name="DragNDropBorder" BorderThickness="2" />
+                <Border
+                 x:Name="DragNDropBorder"
+                 Background="Transparent"
+                 BorderThickness="2"
+                 MouseDown="DragNDropBorder_MouseDown"
+                 />
 
             </Grid>
 
@@ -90,7 +95,11 @@
 
         <Grid Grid.Row="1" Grid.Column="0">
 
-            <syncfusion:SfDataGrid Margin="0,20,0,0" BorderBrush="Transparent" />
+            <syncfusion:SfDataGrid
+             x:Name="ImporterList"
+             Margin="0,20,0,0"
+             BorderBrush="Transparent"
+             />
             <TextBlock
              Margin="0"
              Padding="10,4,10,4"
@@ -103,7 +112,11 @@
         </Grid>
         <Grid Grid.Row="1" Grid.Column="2">
 
-            <syncfusion:SfDataGrid Margin="0,20,0,0" BorderBrush="Transparent" />
+            <syncfusion:SfDataGrid
+             x:Name="ExporterList"
+             Margin="0,20,0,0"
+             BorderBrush="Transparent"
+             />
             <TextBlock
              Margin="0"
              Padding="10,4,10,4"
@@ -205,7 +218,7 @@
          Grid.RowSpan="4"
          Grid.ColumnSpan="4"
          Background="{DynamicResource ContentBackgroundAlt2}"
-         Visibility="Visible"
+         Visibility="Collapsed"
          >
             <Grid.RowDefinitions>
                 <RowDefinition Height="80" />
