--- a/WolvenKit/Views/Others/MaterialRepositoryDrawer.xaml
+++ b/WolvenKit/Views/Others/MaterialRepositoryDrawer.xaml
@@ -2,18 +2,16 @@
  x:Class="WolvenKit.Views.Others.MaterialRepositoryDrawer"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
- xmlns:Converters="clr-namespace:WolvenKit.Functionality"
+ xmlns:Converters1="clr-namespace:WolvenKit.Functionality.Ab4d"
  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
- xmlns:feather="clr-namespace:Feather.Controls;assembly=Feather.Controls"
  xmlns:hc="https://handyorg.github.io/handycontrol"
- xmlns:local="clr-namespace:WolvenKit.Views.Others"
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
  d:DesignHeight="450"
  d:DesignWidth="800"
  mc:Ignorable="d"
  >
     <UserControl.Resources>
-        <Converters:XenConverter x:Key="MyColorToBrushConverterx" />
+        <Converters1:XenConverter x:Key="MyColorToBrushConverterx" />
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
